* Fix Error en al obtener la media * Fix Error al mostrar la torta de ganancias * Fix Error en el swagger para la api consultant/average
